# kriger

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
.github/workflows/: build.yml  release.yml  templates.yml
crates/krigar/: Cargo.toml
crates/kriger/: Cargo.toml
crates/kriger/src/: args.rs  config.rs  main.rs
crates/kriger/src/cli/: args.rs  create.rs  deploy.rs  emoji.rs  mod.rs  model.rs  models.rs
crates/kriger/src/cli/commands/: create.rs  deploy.rs  exploit.rs  mod.rs  submit.rs
crates/kriger/src/server/: args.rs  metrics.rs  mod.rs
crates/kriger_common/: Cargo.toml
crates/kriger_common/src/: config.rs  lib.rs  runtime.rs
crates/kriger_common/src/client/: mod.rs
crates/kriger_common/src/messaging/: mod.rs  model.rs  nats.rs
crates/kriger_common/src/messaging/services/: data.rs  executions.rs  flags.rs  mod.rs  scheduling.rs
crates/kriger_common/src/models/: mod.rs  requests.rs  responses.rs
crates/kriger_common/src/server/: args.rs  mod.rs  runtime.rs
crates/kriger_common/src/utils/: data.rs  mod.rs  time.rs
crates/kriger_controller/: Cargo.toml
crates/kriger_controller/src/: config.rs  lib.rs  metrics.rs
crates/kriger_fetcher/: Cargo.toml
crates/kriger_fetcher/src/: fetcher.rs  lib.rs  metrics.rs
crates/kriger_fetcher/src/fetcher/: attackinglab.rs  cini.rs  dummy.rs  enowars.rs  faust.rs  mod.rs  saar.rs  seer.rs  statisk.rs
crates/kriger_metrics/: Cargo.toml
crates/kriger_metrics/src/: args.rs  lib.rs
crates/kriger_mock/: Cargo.toml
crates/kriger_mock/src/: main.rs  util.rs
crates/kriger_rest/: Cargo.toml
crates/kriger_rest/src/: config.rs  deploy.rs  lib.rs  support.rs
crates/kriger_rest/src/routes/: competition.rs  config.rs  exploits.rs  flags.rs  mod.rs
crates/kriger_runner/: Cargo.toml  README.md
crates/kriger_runner/src/: args.rs  config.rs  lib.rs  runner.rs
crates/kriger_runner/src/runner/: mod.rs  simple.rs
crates/kriger_scheduler/: Cargo.toml
crates/kriger_scheduler/src/: lib.rs  metrics.rs  utils.rs
crates/kriger_submitter/: Cargo.toml
crates/kriger_submitter/src/: lib.rs  metrics.rs
crates/kriger_submitter/src/submitter/: attackinglab.rs  cini.rs  dctf.rs  dummy.rs  enowars.rs  faust.rs  mod.rs  saar.rs  seer.rs
crates/kriger_submitter/src/utils/: futures.rs  mod.rs
crates/kriger_ws/: Cargo.toml
crates/kriger_ws/src/: config.rs  lib.rs
data/base/python/: Dockerfile  exploitlib.py  requirements.txt
data/base/python-slim/: Dockerfile  exploitlib.py  requirements.txt
data/config/: cini.toml  dev.toml  enowars9.toml  faust.toml
data/examples/python-test/: .dockerignore  Dockerfile  exploit.py  exploit.toml
data/templates/python/: .dockerignore  Dockerfile  exploit.py  exploit.toml  exploitlib.py  requirements.txt
data/templates/python-slim/: Dockerfile  exploit.py  exploitlib.py  requirements.txt
data/test/: k8s_registries.yaml  k8s_resources.yaml  nats-seed.sh
docs/: architecture.md  debugging.md  emergency.md  exploits.md  user.md
docs/adrs/: 000-adrs.md  001-fetchers.md  002-submitters.md  003-scheduling.md  004-exploit-containers.md
frontend/: .dockerignore  .env.development  .env.production  .gitignore  Dockerfile  biome.json  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/config/: nginx.conf
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Dialog.tsx  ExecutionDisplay.tsx  HoverCard.tsx  NavBar.tsx  NavigationBar.tsx  SimpleDisplay.tsx  StatsCards.tsx  StatusCell.tsx  StatusCellCard.tsx  Switch.tsx
frontend/src/routes/: __root.tsx  config.lazy.tsx  executions.lazy.tsx  exploits.lazy.tsx  flags.lazy.tsx  index.lazy.tsx  submit.lazy.tsx
frontend/src/services/: models.ts  rest.ts  webSocket.ts
frontend/src/utils/: atoms.ts  cn.ts  constants.ts  enums.ts  hooks.ts  removeSimpleDuplicates.ts  stores.ts  types.ts
