[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
async-nats = "0.35.1"
async-trait = "0.1.81"
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["env", "derive"] }
clap_derive = "4.5.8"
futures = "0.3.30"
hyper = "1.4.1"
hyper-util = "0.1.6"
reqwest = { version = "0.12.5", features = ["rustls-tls", "charset", "http2", "json"], default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
tokio = "1.38.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
