[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
async-nats = "0.35.1"
async-trait = "0.1.81"
axum = "0.7.5"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["env", "derive"] }
clap_derive = "4.5.8"
color-eyre = "0.6.3"
dashmap = "6.0.1"
flume = { version = "0.11.0", features = ["async", "select"] }
futures = "0.3.30"
hyper = "1.4.1"
hyper-util = "0.1.6"
opentelemetry = "0.24.0"
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
opentelemetry-otlp = "0.17.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["rustls-tls", "charset", "http2", "json"], default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0.118"
thiserror = "1.0.61"
time = "0.3.36"
tokio = "1.38.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
