[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
description = "An exploit farm for attack/defense CTFs."
repository = "https://github.com/Cyberlandslaget/kriger"
license = "AGPL-3.0-only"

[workspace.dependencies]
async-nats = "0.40.0"
async-trait = "0.1.81"
axum = "0.8.3"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["env", "derive"] }
clap_derive = "4.5.8"
color-eyre = "0.6.3"
dashmap = "6.0.1"
flume = { version = "0.11.0", features = ["async", "select"] }
futures = "0.3.30"
hyper = "1.4.1"
hyper-util = "0.1.6"
lazy_static = "1.5.0"
opentelemetry = "0.25.0"
opentelemetry-semantic-conventions = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.25.0"
prometheus-client = "0.23.1"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = [
  "rustls-tls",
  "charset",
  "http2",
  "json",
], default-features = false }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0.118"
thiserror = "2.0.12"
time = "0.3.36"
tokio = "1.38.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
toml = "0.8.19"
tower-http = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
