[package]
name = "kriger"
version = "0.0.1"
edition = "2021"

[features]
default = ["server-all"]
server = []
server-all = ["server", "controller", "fetcher", "metrics", "rest", "runner", "submitter", "ws"]
controller = ["dep:kriger_controller", "server"]
fetcher = ["dep:kriger_fetcher", "server"]
metrics = ["dep:kriger_metrics", "server"]
rest = ["dep:kriger_rest", "server"]
runner = ["dep:kriger_runner", "server"]
submitter = ["dep:kriger_submitter", "server"]
ws = ["dep:kriger_ws", "server"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_derive = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kriger_common = { path = "../kriger_common" }
kriger_controller = { path = "../kriger_controller", optional = true }
kriger_fetcher = { path = "../kriger_fetcher", optional = true }
kriger_metrics = { path = "../kriger_metrics", optional = true }
kriger_rest = { path = "../kriger_rest", optional = true }
kriger_runner = { path = "../kriger_runner", optional = true }
kriger_submitter = { path = "../kriger_submitter", optional = true }
kriger_ws = { path = "../kriger_ws", optional = true }
