[package]
name = "kriger"
version = "0.0.1"
edition = "2021"
default-run = "kriger"

[features]
default = ["server-all", "otel", "cli"]
server = []
server-all = [
  "server",
  "controller",
  "fetcher",
  "metrics",
  "rest",
  "runner",
  "scheduler",
  "submitter",
  "ws",
]
controller = ["dep:kriger_controller", "server"]
fetcher = ["dep:kriger_fetcher", "server"]
metrics = ["dep:kriger_metrics", "server"]
rest = ["dep:kriger_rest", "server"]
runner = ["dep:kriger_runner", "server"]
scheduler = ["dep:kriger_scheduler", "server"]
submitter = ["dep:kriger_submitter", "server"]
ws = ["dep:kriger_ws", "server"]
otel = ["dep:tracing-opentelemetry"]
cli = [
  "dep:indicatif",
  "dep:tar",
  "dep:console",
  "dep:humantime",
  "dep:tokio-stream",
  "dep:chrono",
  "dep:inquire",
  "dep:oci-distribution",
]

[dependencies]
chrono = { workspace = true, optional = true }
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
console = { version = "0.15.8", optional = true }
dirs = "5.0.1"
futures.workspace = true
flate2 = "1.0.33"
humantime = { version = "2.1.0", optional = true }
indicatif = { version = "0.17.8", optional = true }
inquire = { version = "0.7.5", optional = true }
opentelemetry.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "process",
] }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["compat", "io-util", "io"] }
tracing.workspace = true
tracing-opentelemetry = { version = "0.25.0", optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
kriger_common = { path = "../kriger_common" }
kriger_controller = { path = "../kriger_controller", optional = true }
kriger_fetcher = { path = "../kriger_fetcher", optional = true }
kriger_metrics = { path = "../kriger_metrics", optional = true }
kriger_rest = { path = "../kriger_rest", optional = true }
kriger_runner = { path = "../kriger_runner", optional = true }
kriger_scheduler = { path = "../kriger_scheduler", optional = true }
kriger_submitter = { path = "../kriger_submitter", optional = true }
kriger_ws = { path = "../kriger_ws", optional = true }
oci-distribution = { version = "0.11.0", optional = true }
serde.workspace = true
tar = { version = "0.4.41", optional = true }
toml.workspace = true
reqwest.workspace = true
