[package]
name = "kriger_common"
version = "0.0.1"
edition = "2021"

[features]

[dependencies]
async-nats = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_derive = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
