[package]
name = "kriger_common"
version = "0.0.1"
edition = "2021"

[features]

[dependencies]
async-nats.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
dashmap = "6.0.1"
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_repr.workspace = true
serde_json.workspace = true
