[package]
name = "kriger_common"
version = "0.0.1"
edition = "2021"

[features]
default = ["server", "client"]
server = ["dep:toml"]
client = ["dep:reqwest"]

[dependencies]
async-nats.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
dashmap.workspace = true
futures.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_repr.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["signal"] }
tokio-util.workspace = true
toml = { workspace = true, optional = true }
tracing.workspace = true
