[package]
name = "kriger_controller"
version = "0.0.1"
edition = "2021"

[features]

[dependencies]
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
futures.workspace = true
k8s-openapi = { version = "0.22.0", features = ["latest"] }
kriger_common = { path = "../kriger_common" }
kube = "0.92.1"
tokio.workspace = true
tracing.workspace = true
