[package]
name = "kriger_controller"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]

[dependencies]
async-nats.workspace = true
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
futures.workspace = true
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kriger_common = { path = "../kriger_common" }
kube = "0.99.0"
lazy_static.workspace = true
prometheus-client.workspace = true
tokio.workspace = true
tracing.workspace = true
