[package]
name = "kriger_fetcher"
version = "0.0.1"
edition = "2021"

[features]

[dependencies]
chrono.workspace = true
color-eyre.workspace = true
kriger_common = { path = "../kriger_common" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
warp = "0.3.7"
