[package]
name = "kriger_fetcher"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
color-eyre.workspace = true
dashmap.workspace = true
futures.workspace = true
kriger_common = { path = "../kriger_common" }
prometheus-client.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
warp = "0.3.7"
