[package]
name = "kriger_metrics"
version = "0.0.1"
edition = "2021"

[features]

[dependencies]
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
futures.workspace = true
kriger_common.path = "../kriger_common"
opentelemetry = "0.23.0"
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16.0", features = ["metrics"] }
tokio.workspace = true
tracing.workspace = true
