[package]
name = "kriger_metrics"
version = "0.0.1"
edition = "2021"

[features]

[dependencies]
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
futures.workspace = true
kriger_common.path = "../kriger_common"
opentelemetry.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp = { workspace = true, features = ["metrics"] }
tokio.workspace = true
tracing.workspace = true
