[package]
name = "kriger_mock"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.8.3" }
clap.workspace = true
hyper = { version = "1.4.0", features = ["server", "http1"] }
rand.workspace = true
serde.workspace = true
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "net",
  "macros",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
