[package]
name = "kriger_rest"
version = "0.0.1"
edition = "2021"

[features]

[dependencies]
axum.workspace = true
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
kriger_common = { path = "../kriger_common" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
