[package]
name = "kriger_rest"
version = "0.0.1"
edition = "2021"

[features]

[dependencies]
axum = { workspace = true, features = ["macros"] }
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
kriger_common = { path = "../kriger_common" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing.workspace = true
