[package]
name = "kriger_rest"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]

[dependencies]
axum = { workspace = true, features = ["macros", "query"] }
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
kriger_common = { path = "../kriger_common" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing.workspace = true
