[package]
name = "kriger_runner"
version = "0.0.1"
edition = "2021"

[features]

[dependencies]
async-channel = "2.3.1"
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
futures.workspace = true
kriger_common = { path = "../kriger_common" }
num_cpus = "1.16.0"
serde_json.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true
tracing-subscriber.workspace = true
