[package]
name = "kriger_scheduler"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]

[dependencies]
base64.workspace = true
chrono.workspace = true
color-eyre.workspace = true
dashmap.workspace = true
futures.workspace = true
kriger_common.path = "../kriger_common"
prometheus-client.workspace = true
tokio.workspace = true
tracing.workspace = true
