[package]
name = "kriger_submitter"
version = "0.0.1"
edition = "2021"

[features]

[dependencies]
base64.workspace = true
color-eyre.workspace = true
futures.workspace = true
kriger_common.path = "../kriger_common"
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
