[package]
name = "kriger_submitter"
version = "0.0.1"
edition = "2021"

[features]

[dependencies]
async-nats.workspace = true
async-trait.workspace = true
base64.workspace = true
color-eyre.workspace = true
futures.workspace = true
kriger_common.path = "../kriger_common"
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
