[package]
name = "kriger_submitter"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]

[dependencies]
async-nats.workspace = true
async-trait.workspace = true
base64.workspace = true
color-eyre.workspace = true
futures.workspace = true
kriger_common.path = "../kriger_common"
prometheus-client.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
