[package]
name = "kriger_ws"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]

[dependencies]
async-nats.workspace = true
clap.workspace = true
clap_derive.workspace = true
color-eyre.workspace = true
fastwebsockets = { version = "0.8.0", features = ["upgrade", "unstable-split"] }
flume.workspace = true
futures.workspace = true
http-body-util = "0.1.2"
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["tokio", "server", "http1", "http2"] }
kriger_common = { path = "../kriger_common" }
time.workspace = true
tokio = { workspace = true, features = ["rt", "net"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
form_urlencoded = "1.2.1"
